--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.30.1",
     "remark-gfm": "^4.0.1"
